# gr-window

./: CMakeLists.txt  main.cpp  stb_image.h  timer.cpp  timer.h
gr-render/: CMakeLists.txt
gr-render/src/: common.h  gColor.h  gCommon.h  gRender.cpp  gRender.h  gShader.cpp  gShader.h  gShaderSource.h  gTexture.cpp  gTexture.h  gTypes.h  gVertex2D.h  gVertex3D.h  gVertexArray.cpp  gVertexArray.h  gl.cpp  gl.h  types.h
res/shader/: default.frag  default.vert
